[Password Manager] Update suggestions when new credentials are fetched

If a password is added/updated without navigation to a page, for example
by using the manual fallbacks, now the autofill suggestions on the
current page will be updated to reflect the changes.

Bug: 756415
Change-Id: I2d3081baefc5a0e96508b5675ed69edd9c4a0b54
Reviewed-on: https://chromium-review.googlesource.com/625796
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Commit-Queue: Christos Froussios <cfroussios@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497354}
Former-commit-id: 081b65ccf8acb836658c6413ffd47bed4ec2d733